<resources>
    <string name="app_name">Register</string>
    <string name="login">登录/注册</string>
    <string name="account">手机号</string>
    <string name="password">密码</string>
    <string name="phone_number_login">密码登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_register">邮箱登录</string>
    <string name="find_password">找回密码</string>
    <string name="next">下一步</string>
    <string name="get_code">获取验证码</string>
    <string name="new_rigister">新用户注册</string>
    <string name="read">已阅读并同意服务协议</string>
</resources>